--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -1,14 +1,18 @@
 .navbar {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.navList {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 40px;
-  border: 1px solid black;
-  border-radius: 5px;
+  list-style: none;
+  padding: 10px;
+  margin: 0px;
 }
 
-.navElements {
-  padding: 10px;
-  cursor: pointer;
+.navItem {
   text-decoration: none;
 }
