--- a/src/components/NavBarStyles.css
+++ b/src/components/NavBarStyles.css
@@ -1,22 +1,37 @@
 /* NavBarStyles.css */
 
-.navbar {
+.nav-list {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333; /* Background color for the navbar */
+  background-color: #86be66; /* Background color for the navbar */
   padding: 20px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  margin: 0px;
+  list-style: none;
 }
 
-.navElements {
+.nav-link {
   text-decoration: none;
-  color: #fff; /* Text color for the links */
+  color: #025722; /* Text color for the links */
   margin: 0 15px;
   transition: color 0.3s ease;
   font-weight: bold;
 }
 
-.navElements:hover {
+.nav-link:hover {
   color: #007bff; /* Color on hover */
+}
+
+.title {
+  font-family: "Georgia", serif;
+  font-size: 40px; /* Adjust as needed */
+  font-weight: bolder; /* Or choose a slightly bold variant */
+  color: #4e6642; /* Dark green for a natural feel */
+  width: 400px;
+  margin: 0px;
+}
+
+.title-container {
+  text-align: center;
 }
